# TAKEED-FOR-amd-Hackathon-

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
backend/: main.py
backend/claims/: __init__.py  service.py
backend/config/: settings.py
backend/db/: __init__.py  database.py  models.py
backend/ingest/: __init__.py  __main__.py  digitizer.py  pipeline.py
backend/parser/: __init__.py  pdf_parser.py
backend/report/: __init__.py  compliance.py
backend/retriever/: __init__.py  __main__.py  embedder.py  retrieval.py
backend/validator/: __init__.py  verbatim.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/claims/[id]/: page.tsx
frontend/app/upload/: page.tsx
frontend/lib/: api.ts
scripts/: make_sample_claim.py
