[project]
name = "taakkud"
version = "0.1.0"
description = "Ta'akkud — Government Claims Compliance Verification Platform (Hackathon MVP)"
requires-python = ">=3.12,<3.13"

# Phase 1 dependencies only. ML / OCR / Anthropic deps are added in later phases
# so we don't install heavy packages before we need them (2 GB RAM box).
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "python-multipart>=0.0.20",
]

[tool.uv]
# Later phases will add: anthropic, rapidfuzz, fastembed, numpy, pymupdf,
# pdfplumber, pytesseract, pillow.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
